# forest-offsets-fires

./: .pre-commit-config.yaml  Dockerfile  README.md  environment.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: build.yaml  firms-nrt.yaml  firms_nrt.yaml  lance-firms-monitoring.yaml  main.yaml  monitor.yaml  nifc-perimeters.yaml  test.yaml
binder/: Dockerfile  environment.yml
binder/image-tests/: test_import.py
carbonplan_forest_offsets_fires/: __init__.py  firms.py  utils.py
carbonplan_forest_offsets_fires/data/: display-names.json
carbonplan_forest_offsets_fires/firms/: __init__.py  io.py  rasterize.py  vectorize.py
carbonplan_forest_offsets_fires/prefect/tasks/: geometry.py  nifc.py
carbonplan_forest_offsets_fires/prefect/workflows/: Untitled.ipynb  calculate_project_stats.py  download_nifc_perimeters.py  generate_display_data.py  make_fire_tiles.py  make_project_tiles.py  monitor_project_fires.py  nifc_perimeters.py
notebooks/: fire-year-outlook-2022.ipynb  firms-thermal-anomalies.ipynb
scripts/: display_names.py  firms_nrt_ETL.py  firms_nrt_raster_ETL.py  generate_firms_pyramids.py  generate_firms_tiles.py  package_geometries.ipynb  package_geometries.py
tests/: test_package.py
